k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retainiq-api
  namespace: retainiq-system
  labels:
    app.kubernetes.io/name: retainiq-api
    app.kubernetes.io/component: inference-api
    app.kubernetes.io/part-of: retainiq-platform
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: retainiq-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: retainiq-api
        app.kubernetes.io/component: inference-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - retainiq-api
                topologyKey: kubernetes.io/hostname
      containers:
        - name: api
          image: ghcr.io/henriquebotelhogomes/telco_churn:v0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1536Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
