k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retainiq-ingress
  namespace: retainiq-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  rules:
    - host: retainiq.internal.telecom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retainiq-api-service
                port:
                  number: 80
